Minor layout issue patches.

--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -36,7 +36,6 @@ html {
 	padding: 0;
 	width: 100%;
 	min-height: 100%;
-	overflow: hidden;
 	scrollbar-width: thin;
 	color: var(--text-1);
 	font-size: 1.2rem;
@@ -51,7 +50,6 @@ body {
 	background: var(--bg-1);
 	width: 100%;
 	min-height: 100svh;
-	overflow: hidden;
 }
 
 @font-face {
@@ -135,7 +133,7 @@ main {
 	width: 30%;
 	min-width: 350px;
 	@media (orientation: portrait) {
-		min-width: 90vw;
+		width: 90vw;
 	}
 }
 
@@ -148,7 +146,7 @@ main {
 	width: 100%;
 	min-width: 350px;
 	@media (orientation: portrait) {
-		min-width: 90vw;
+		width: 90vw;
 	}
 }
 
